# baustellenschild

./: .gitignore  pyproject.toml  test_provider.py
.github/workflows/: crawl.yml
data/: baustellen.json  parcels.json  parcels_metadata.json
debug/: bauschild_478_414_203.html  bauschild_478_414_203_main.html  captured_request_details.json  detail_B-2018-1590-3.html  detail_POST_B-2018-1590-3.html  response_478_414_203.html  response_body_478_414_203.html  unexpected_response_478_414_1_3.html
src/: crawl.py  crawl_debug.py  debug_playwright_search.py  debug_request_inspection.py  enumerator.py  fetch_detail_playwright.py  fetch_links_from_list.py  find_and_extract_bauschild.py  inspect_bauschild.py  inspect_detail.py  scraper.py  test_scraper_fix.py  test_scraper_verbose.py
src/baustellenschild.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
