[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "baustellenschild"
version = "0.1.0"
description = "Frankfurt construction site (Bauschild) data crawler"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
crawl = "crawl:main"
